changed in index.js the route that renders the homepage, also changed in resturantutil,js a debug line for generate menu and added a function to genereateRestaurantReport, and in index.js added afref for alerts and added a random menu item and a description of it and a price

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,17 @@
   <body>
     <main class="main-content">
       <h1>Restaurant Menus</h1>
+
+      <% if (randomMenuItem) { %>
+      <h2>Random Menu Item</h2>
+      <p><strong>Restaurant:</strong> <%= restaurantName %></p>
+      <p><strong>Item:</strong> <%= randomMenuItem.name %></p>
+      <p><%= randomMenuItem.description %></p>
+      <p>Price: $<%= randomMenuItem.price %></p>
+      <% if (randomMenuItem.isSpecial) { %>
+      <p><em>Special of the Day!</em></p>
+      <% } %> <% } %>
+
       <h2>Please choose your restaurant to get the menu</h2>
       <form action="/restaurant" method="GET">
         <label for="restaurantId">Select a restaurant:</label>
@@ -17,6 +28,10 @@
         </select>
         <button type="submit">Get the menu!</button>
       </form>
+
+      <br />
+
+      <a href="/alerts">View All Restaurants with Special Offers</a>
     </main>
   </body>
 </html>
