--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main class="main-content">
-      <h1>Restaurant Menus</h1>
+      <h1 class="highlighted-header">Restaurant Menus</h1>
 
       <% if (randomMenuItem) { %>
       <h2>Random Menu Item</h2>
